--- a/elements/header.html
+++ b/elements/header.html
@@ -1,3 +1,4 @@
+<section id="landpage" class="landpage">
 <header>
   <div class="header">
     <div class="logo-holder animated slideInDown">
@@ -63,3 +64,4 @@
     </div>
     <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
 </header>
+</section>
