Added Fixed Nav

--- a/elements/header.html
+++ b/elements/header.html
@@ -1,67 +1,67 @@
 <section id="landpage" class="landpage">
 <header>
-  <div class="header">
-    <div class="logo-holder animated slideInDown">
-      {{ Image('logo') }}
-    </div>
-    <div class="menu-holder animated slideInDown">
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> HEADSET</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> TECLADO</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> MOUSE</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> MONITOR</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> CADEIRA</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> MOUSEPAD</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"><span class="orange-plus">+</span> PLACA DE VÍDEO</button>
-        <div class="dropdown-content animated fadeIn">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
+<div id="header" class="header">
+  <div class="logo-holder animated slideInDown">
+    {{ Image('logo') }}
+  </div>
+  <div class="menu-holder animated slideInDown">
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> HEADSET</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
       </div>
     </div>
-    <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> TECLADO</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> MOUSE</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> MONITOR</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> CADEIRA</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> MOUSEPAD</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn"><span class="orange-plus">+</span> PLACA DE VÍDEO</button>
+      <div class="dropdown-content animated fadeIn">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+  </div>
+  <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
 </header>
 </section>
