Updated header animation

--- a/elements/header.html
+++ b/elements/header.html
@@ -1,8 +1,8 @@
 <section id="landpage" class="landpage">
-<header>
+  <div id="header-bar" class="header-bar"></div>
 <div id="header" class="header">
   <div class="logo-holder animated slideInDown">
-    {{ Image('logo') }}
+    <img src="assets/images/tecnologo.png" width="250px" height="auto">
   </div>
   <div class="menu-holder animated slideInDown">
     <div class="dropdown">
@@ -63,5 +63,4 @@
     </div>
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
-</header>
 </section>
