--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,6 @@
+<div class="application">
+  {% element 'header' %}
+</div>
 {% if settings.limitProducts %}
     {% set limitProducts = settings.limitProducts %}
 {% else %}
