--- a/elements/header.html
+++ b/elements/header.html
@@ -2,7 +2,7 @@
   <div id="header-bar" class="header-bar"></div>
 <div id="header" class="header">
   <div class="logo-holder animated slideInDown">
-    {{ Image('logo') }}
+    <img src="assets/images/tecnologo.png" width="250px" height="auto">
   </div>
   <div class="menu-holder animated slideInDown">
     <div class="dropdown">
