--- a/elements/showcase.html
+++ b/elements/showcase.html
@@ -3,7 +3,7 @@
         <ul class="row">
         {% for product in products %}
             {% set ranking = product.ranking %}
-            <li class="products-item-each" data-tray-tst="vitrine_produto">
+            <li class="col-sm-4" data-tray-tst="vitrine_produto">
                 {% element 'snippets/product' {"product": product} %}
             </li>
 
