Adding the sold out class

--- a/elements/snippets/price.html
+++ b/elements/snippets/price.html
@@ -58,7 +58,9 @@
             {% endif %}
 
         {% else %}
+        <div class="product-soldout">
             <p>Esgotado!</p>
+            </div>
         {% endif %}
 
     {% else %}
