--- a/elements/snippets/price.html
+++ b/elements/snippets/price.html
@@ -59,7 +59,9 @@
 
         {% else %}
         <div class="product-soldout">
+          <span class="downer">
             <p>Esgotado!</p>
+            <span>
             </div>
         {% endif %}
 
