--- a/css/custom.css.html
+++ b/css/custom.css.html
@@ -74,7 +74,7 @@ html .botao-commerce:link,
 /* footer */
 .foo-content,
 .foo-message{
-    background: {{ settings.color_footer }};
+    background: #090909;
 }
 
 .foo-content h3,
