--- a/elements/header.html
+++ b/elements/header.html
@@ -8,57 +8,89 @@
     <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> HEADSET</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=ASTRO&order=3&categoria=25">ASTRO</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=25">CORSAIR</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=ELEMENT+G&order=3&categoria=25">ELEMENT G</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=25">HYPERX</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=25">LOGITECH</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=3&categoria=25">MOTOSPEED</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=RAZER&order=3&categoria=25">RAZER</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=REDRAGON&order=3&categoria=25">REDRAGON</a>
+        <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=STEELSERIES&order=3&categoria=25">STEELSERIES</a>
       </div>
     </div>
     <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> TECLADO</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=47">CORSAIR</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=47">HYPERX</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=47">LOGITECH</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=3&categoria=47">MOTOSPEED</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=OEX+GAME&order=3&categoria=47">OEX GAME</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=RAZER&order=3&categoria=47">RAZER</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=REDRAGON&order=3&categoria=47">REDRAGON</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=ROCCAT&order=3&categoria=47">ROCCAT</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=STEELSERIES&order=3&categoria=47">STEELSERIES</a>
+        <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=THERMALTAKE&order=3&categoria=47">THERMALTAKE</a>
       </div>
     </div>
     <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> MOUSE</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">CORSAIR</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">HYPER X</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=45">LOGITECH</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=3&categoria=45">MOTOSPEED</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=RAZER&order=3&categoria=45">RAZER</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=REDRAGON&order=3&categoria=45">REDRAGON</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=STEELSERIES&order=3&categoria=45">STEELSERIES</a>
+        <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=ZOWIE&order=3&categoria=45">ZOWIE</a>
+
       </div>
     </div>
     <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> MONITOR</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ACER&order=3&categoria=31">ACER</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ASUS&order=3&categoria=31">ASUS</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=PHILIPS&order=3&categoria=31">PHILIPS</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=SAMSUNG&order=3&categoria=31">SAMSUNG</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ZOWIE&order=3&categoria=31">ZOWIE</a>
       </div>
     </div>
     <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> CADEIRA</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/cadeira?loja=657632&palavra_busca=&filtrar_marca=RAIDMAX&order=3&categoria=79">RAIDMAX</a>
       </div>
     </div>
     <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> MOUSEPAD</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=75">CORSAIR</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=75">HYPERX</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=75">LOGITECH</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=3&categoria=75">MOTOSPEED</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=OEX+GAME&order=3&categoria=75">OEX GAME</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=RAIDMAX&order=3&categoria=75">RAIDMAX</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=RAZER&order=3&categoria=75">RAZER</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=REDRAGON&order=3&categoria=75">REDRAGON</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=ROCCAT&order=3&categoria=75">ROCCAT</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=STEELSERIES&order=3&categoria=75">STEELSERIES</a>
+        <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=ZOWIE&order=3&categoria=75">ZOWIE</a>
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> PLACA DE VÍDEO</button>
+      <button class="dropbtn"><span class="orange-plus">+</span> OUTRAS CATEGORIAS</button>
       <div class="dropdown-content animated fadeIn">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://www.tecnomult.com/webcam">WEBCAM</a>
+        <a href="http://www.tecnomult.com/cooler">COOLER</a>
+        <a href="http://www.tecnomult.com/memo-r-i-a">MEMÓRIA</a>
+        <a href="http://www.tecnomult.com/fonte">FONTE</a>
+        <a href="http://www.tecnomult.com/hd">HD</a>
+        <a href="http://www.tecnomult.com/gabinete">GABINETE</a>
+        <a href="http://www.tecnomult.com/placasdevideo">PLACA DE VÍDEO</a>
+        <a href="http://www.tecnomult.com/placamae">PLACA MÃE</a>
       </div>
     </div>
   </div>
