--- a/elements/header.html
+++ b/elements/header.html
@@ -6,7 +6,7 @@
   </div>
   <div class="menu-holder animated slideInDown">
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> HEADSET</button>
+      <a href="http://www.tecnomult.com/headset" class="dropbtn"><span class="orange-plus">+</span> HEADSET</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=ASTRO&order=3&categoria=25">ASTRO</a>
         <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=25">CORSAIR</a>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> CADEIRA</button>
+      <a class="dropbtn"><span class="orange-plus">+</span> CADEIRA</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/cadeira?loja=657632&palavra_busca=&filtrar_marca=RAIDMAX&order=3&categoria=79">RAIDMAX</a>
       </div>
