--- a/elements/header.html
+++ b/elements/header.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> TECLADO</button>
+      <a href="http://www.tecnomult.com/teclado" class="dropbtn"><span class="orange-plus">+</span> TECLADO</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=47">CORSAIR</a>
         <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=47">HYPERX</a>
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> MOUSE</button>
+      <a href="http://www.tecnomult.com/mouse" class="dropbtn"><span class="orange-plus">+</span> MOUSE</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">CORSAIR</a>
         <a href="http://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">HYPER X</a>
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> MONITOR</button>
+      <a href="http://www.tecnomult.com/monitor" class="dropbtn"><span class="orange-plus">+</span> MONITOR</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ACER&order=3&categoria=31">ACER</a>
         <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ASUS&order=3&categoria=31">ASUS</a>
@@ -59,13 +59,13 @@
       </div>
     </div>
     <div class="dropdown">
-      <a class="dropbtn"><span class="orange-plus">+</span> CADEIRA</a>
+      <a href="http://www.tecnomult.com/cadeira" class="dropbtn"><span class="orange-plus">+</span> CADEIRA</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/cadeira?loja=657632&palavra_busca=&filtrar_marca=RAIDMAX&order=3&categoria=79">RAIDMAX</a>
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn"><span class="orange-plus">+</span> MOUSEPAD</button>
+      <a href="http://www.tecnomult.com/mousepad" class="dropbtn"><span class="orange-plus">+</span> MOUSEPAD</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=75">CORSAIR</a>
         <a href="http://www.tecnomult.com/mousepad?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=75">HYPERX</a>
