--- a/elements/snippets/price.html
+++ b/elements/snippets/price.html
@@ -60,7 +60,7 @@
         {% else %}
         <div class="product-soldout">
           <span class="downer">
-            <p>Esgotado!</p>
+            <p>ESGOTADO!</p>
             <span>
             </div>
         {% endif %}
