Fixed new header

--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -1,4 +1,5 @@
-<div id="header-bar" class="header-bar"></div>
+<section id="landnopage" class="landnopage">
+  <div id="header-bar" class="header-bar"></div>
 <div id="header" class="header">
   <div class="logo-holder animated slideInDown">
     <img src="{{ asset('img/tecnologo.png') }}" width="250px" height="auto">
@@ -94,3 +95,4 @@
     </div>
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
+</section>
