Added search function

--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -5,6 +5,7 @@
     <img src="{{ asset('img/tecnologo.png') }}" width="250px" height="auto">
   </div>
   <div class="menu-holder animated slideInDown">
+    {% element 'snippets/search' %}
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
 </section>
