Fixed the search bar

--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -7,7 +7,7 @@
   <div class="menu-holder animated slideInDown">
     {% element 'snippets/search' %}
   </div>
-  <div class="menu-holder animated slideInDown">
+  <div class="menu-holder animated slideInDown login-holder">
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
 </section>
