--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -8,6 +8,7 @@
     {% element 'snippets/search' %}
   </div>
   <div class="menu-holder animated slideInDown login-holder">
+    {% element 'snippets/cart' %}
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
 </section>
