Added logo link

--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -2,7 +2,7 @@
 <div id="header-bar" class="header-bar"></div>
 <div id="header" class="header">
   <div class="logo-holder animated slideInDown">
-    <img src="{{ asset('img/tecnologo.png') }}" width="250px" height="auto">
+    <a href="https://www.tecnomult.com"><img src="{{ asset('img/tecnologo.png') }}" width="250px" height="auto"></a>
   </div>
   <div class="menu-holder animated slideInDown">
     {% element 'snippets/search' %}
