--- a/css/custom.css.html
+++ b/css/custom.css.html
@@ -97,7 +97,7 @@ html .botao-commerce:link,
 
 /* background color */
 .application{
-    background-color: {{ settings.color_background }};
+    background-color: #0c0c0c;
     background-attachment: {{ settings.bg_attachment }};
     background-position-x: {{ settings.bg_position_x }};
     background-position-y: {{ settings.bg_position_y }};
