--- a/elements/snippets/price.html
+++ b/elements/snippets/price.html
@@ -9,7 +9,7 @@
 
                 <div class="prices" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
                     {% if product.has_variation %}
-
+                        <span class="price-various">{{ Translation('a_partir_de') }}</span>
                     {% endif %}
 
                     {% if settings.price_before_style == 'strike' or settings.price_before_style == 'strike-depor' %}
@@ -22,24 +22,19 @@
                     {% endif %}
 
                     {% if product.price_offer > 0 and product.show_price %}
-                        <div class="price-before {{ priceStyle }}"><span class="downer">
+                        <div class="price-before {{ priceStyle }}">
                             {{ priceOld }} <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
                             <span>{{ product.price|currency }}</span>
-                            </span>
                         </div>
 
                         <div class="price-promotion">
                             <div class="price-off">
                                 {% if product.has_other_prices %}
-                                <span class="downer">
-                                    <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
+                                    {{ Translation('apartir') }} <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
                                     <span itemprop="price" content="{{ product.price_offer }}">{{ product.price_offer|currency  }}</span>
-                                    </span>
                                 {% else %}
-                                <span class="downer">
                                     {{ priceOld ? 'Por: ' }} <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
                                     <span itemprop="price" content="{{ product.price_offer }}">{{ product.price_offer|currency  }}</span>
-                                    </span>
                                 {% endif %}
                             </div>
                         </div>
@@ -49,10 +44,8 @@
                     </div>
                         <div class="product-price-button">
                             {% if product.has_other_prices %}
-                            <span class="downer">
-                                <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
+                                {{ Translation('apartir') }} <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
                                 <span itemprop="price" content="{{ product.price }}">{{ product.price|currency  }}</span>
-                                </span>
                             {% else %}
                             <span class="downer">
                                 {{ priceOld ? 'Por: ' }} <abbr class="currency" title="BRL" itemprop="priceCurrency" content="BRL">{{ settings.currency }}</abbr>
