Added side-menu to main page

--- a/elements/header.html
+++ b/elements/header.html
@@ -95,4 +95,16 @@
     </div>
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
+  </div>
+  <div class="side-bar-holder">
+<div class="search-bar-side">
+<div class="icon-adjust"><i class="fas fa-search"></i></div>
+</div>
+<div class="search-bar-side2">
+<div class="icon-adjust"><i class="fas fa-user"></i></div>
+</div>
+<div class="search-bar-side3">
+<div class="icon-adjust"><i class="fas fa-shopping-cart"></i></div>
+</div>
+  </div>
 </section>
