--- a/elements/header.html
+++ b/elements/header.html
@@ -98,13 +98,15 @@
   </div>
   <div class="side-bar-holder">
 <div class="search-bar-side">
-<div class="icon-adjust">{% element 'snippets/search' %}<i class="fas fa-search"></i></div>
+  {% element 'snippets/search' %}
+<div class="icon-adjust"><i class="fas fa-search"></i></div>
 </div>
 <div class="search-bar-side2">
 <div class="icon-adjust"><i class="fas fa-user"></i></div>
 </div>
 <div class="search-bar-side3">
-<div class="icon-adjust">{% element 'snippets/cart' %}<i class="fas fa-shopping-cart"></i></div>
+  {% element 'snippets/cart' %}
+<div class="icon-adjust"><i class="fas fa-shopping-cart"></i></div>
 </div>
   </div>
 </section>
