--- a/elements/header.html
+++ b/elements/header.html
@@ -98,6 +98,7 @@
   </div>
   <div class="side-bar-holder">
 <div class="search-bar-side">
+  {% element 'snippets/search' %}
 <div class="icon-adjust"><i class="fas fa-search"></i></div>
 </div>
 <div class="search-bar-side2">
