Added cart function to main page

--- a/elements/header.html
+++ b/elements/header.html
@@ -105,6 +105,7 @@
 <div class="icon-adjust"><i class="fas fa-user"></i></div>
 </div>
 <div class="search-bar-side3">
+  {% element 'snippets/cart' %}
 <div class="icon-adjust"><i class="fas fa-shopping-cart"></i></div>
 </div>
   </div>
