Updated Cart Function

--- a/elements/header.html
+++ b/elements/header.html
@@ -105,7 +105,8 @@
 <div class="icon-adjust"><i class="fas fa-user"></i></div>
 </div>
 <div class="search-bar-side3">
-<div class="icon-adjust">{% element 'snippets/cart' %}<i class="fas fa-shopping-cart"></i></div>
+  {% element 'snippets/cart-front' %}
+<div class="icon-adjust"><i class="fas fa-shopping-cart"></i></div>
 </div>
   </div>
 </section>
