--- a/elements/snippets/cart-front.html
+++ b/elements/snippets/cart-front.html
@@ -1,5 +1,5 @@
 <a href="{{ links.cart }}" class="cart clearfix" data-tray-tst="link_qtde_carrinho">
-    <div class="cart-info hidden-xs">
+    <div class="cart-info cart-info-front hidden-xs">
         <div class="cart-amount">
             <span data-cart="amount" data-tray-tst="carrinho_qtde">{{ cart.amount }}</span> {{ Translation('itens') }}
         </div>
